Some logic added

--- a/index.html
+++ b/index.html
@@ -4,4 +4,5 @@
 </head>
 <body>
     <p><a href="2DVersion/raymarching2d.html">2D Version of RayMarching</a></p>
+    <p><a href="3DVersion/raymarching3d.html">3D Version of RayMarching</a></p>
 </body>
