Refactoring + new classes

--- a/3DVersion/raymarching3d.html
+++ b/3DVersion/raymarching3d.html
@@ -7,7 +7,11 @@
     <script src='camera.js'></script>
     <script src='renderer.js'></script>
     <script src='specialMath.js'></script>
+    <script src='renderableObject.js'></script>
+    <script src='intersectInfo.js'></script>
+    <script src='material.js'></script>
     <script src='sphere.js'></script>
+    <script src='plane.js'></script>
     <script src='raymarching3d.js'></script>
 </head>
 <body>
