diffuse light added

--- a/3DVersion/raymarching3d.html
+++ b/3DVersion/raymarching3d.html
@@ -12,6 +12,8 @@
     <script src='material.js'></script>
     <script src='sphere.js'></script>
     <script src='plane.js'></script>
+    <script src='lightSource.js'></script>
+    <script src='color.js'></script>
     <script src='raymarching3d.js'></script>
 </head>
 <body>
