--- a/3DVersion/raymarching3d.html
+++ b/3DVersion/raymarching3d.html
@@ -3,7 +3,6 @@
     <title>Ray Marching 3D version</title>
     <script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
     <link rel='stylesheet' type='text/css' media='screen' href='raymarching3d.css'>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/9.3.0/math.min.js"></script>
     <script src='camera.js'></script>
     <script src='renderer.js'></script>
     <script src='specialMath.js'></script>
@@ -14,6 +13,7 @@
     <script src='plane.js'></script>
     <script src='lightSource.js'></script>
     <script src='color.js'></script>
+    <script src='materials.js'></script>
     <script src='raymarching3d.js'></script>
 </head>
 <body>
